Cambio en el mensaje de bienvenida

--- a/mipaginita.html
+++ b/mipaginita.html
@@ -5,6 +5,6 @@
     <title>Esta es mi pagina web</title>
 </head>
 <body>
-    <p>Welcome!</p>
+    <p>Este es el código en mi nueva rama</p>
 </body>
-</html>
+</html> git log --graph --oneline --all
